# midi-looper

./: .pylintrc  pyproject.toml
midi_looper/: config.py  midi_looper.py
